korekce css a html struktury

--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -1,8 +1,4 @@
-<div class="page-header">
-  <h1>
-    Vodní záchranná služba ČČK <small>MS Třebíč</small>
-  </h1>
-</div>
+<% title 'Vodní záchranná služba ČČK', 'MS Třebíč' %>
 <%if @articles.first %>
 <div class="hero-unit">
   <h1><%=@articles.first.try(:title)%></h1>
