--- a/app/views/articles/_show_attachments.html.erb
+++ b/app/views/articles/_show_attachments.html.erb
@@ -1,5 +1,5 @@
 
-  <div class="attachments span6">
+  <div class="attachments">
     <% unless @article.attachments.empty? %>
       <h3>Přílohy</h3>
       <ul>
