--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,27 +1,24 @@
 <% title "Články" %>
 
 <% if can? :create, Article %>
-    <%= link_to new_article_path, :class => "btn btn-large btn-primary pull-right" do %>
-      <i class="icon-pencil icon-white"></i> Nový článek
-    <% end %>
+  <%= link_to new_article_path, :class => "btn btn-large btn-primary pull-right" do %>
+    <i class="icon-pencil icon-white"></i> Nový článek
+  <% end %>
 <% end %>
-<br />
-<div class=row-fluid">
+
+<div class="row-fluid">
   <% @articles.each do |article| %>
     <div class="span5 well">
-      <h2><%= article.title %>
+      <h2><%= link_to article.title, article %>
         <%= link_to article_path(article, :anchor => 'comments'), :class => "badge badge-info" do %>
           <%=article.comments.count%>
           <i class="icon-comment"></i>
         <% end %>
       </h2>
-      <p>
-      <em>
-        <%= article.user.full_name %>
-        <%= l article.created_at, :format => :long %>
-      </em>
-      </p>
-      <p><%= simple_format article.content.truncate(300) %></p>
+
+      <%= render 'articles/meta_info', :article => article %>
+
+      <p><%= simple_format article.content.truncate(200) %></p>
       <div class="btn-group pull-right">
         <% if can? :read, article %>
           <%= link_to article, :class => "btn" do %>
