--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]-->
 
     <!-- Le styles -->
@@ -26,7 +26,7 @@
 
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
-          <div class="container-fluid">
+        <div class="container-fluid">
           <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -42,33 +42,42 @@
 
     <div class="container-fluid">
       <div class="row-fluid">
-        <div class="span2">
-          <div class="row show-grid">
-            <div class="span2">
-              <%= image_tag "logo_vzs.gif", :size => "150x150", :class => "span2" %>
-            </div>
+
+        <div class="span3" id="vzs-left-menu">
+          <div class="row-fluid" id="vzs-main-logo">
+            <%= image_tag "logo_vzs.gif", :size => "150x150" %>
           </div>
-          <div class="row spacer">
-            <div class="span2"><br /></div>
-          </div>
-          <div class="row">
-            <div class="well sidebar-nav">
-              <%= render 'layouts/menu' %>
-            </div><!--/.well -->
-          </div>
+          <div class="well sidebar-nav">
+            <%= render 'layouts/menu' %>
+          </div><!--/.well -->
         </div><!--/span-->
-        <div class="span10">
+
+        <div class="span9" id="vzs-main-content">
+          <% if content_for? :title %>
+            <div class="page-header">
+              <h1>
+                <%= yield(:title) %>
+                <% if content_for? :title_sub %>
+                  <small><%= yield(:title_sub) %></small>
+                <% end %>
+              </h1>
+            </div>
+          <% end %>
+
           <% flash.each do |name, msg| %>
             <%= content_tag :div, msg, :id => "flash_#{name}", :class => "alert" %>
           <% end %>
-          <%= content_tag :h1, yield(:title) if show_title? %>
-          <%= yield %>
+
+          <div class="row-fluid" id="vzs-page-content">
+            <%= yield %>
+          </div>
         </div>
+
       </div><!--/row-->
 
       <hr />
       <footer>
-        <p>&copy; FriendlySystems.cz 2012</p>
+      <p>&copy; FriendlySystems.cz 2012</p>
       </footer>
 
     </div> <!-- /container -->
