procisteni a dostylovani sablony article/show
* obalovaci bloky jsou take v partialech komentaru/priloh
* tlacitka umistena ve vlastnim partialu
* doplneny vzs-* css tridy
* text clanku zarovnan do bloku

--- a/app/assets/stylesheets/vzs.css
+++ b/app/assets/stylesheets/vzs.css
@@ -7,6 +7,9 @@
 #vzs-main-content {}
 #vzs-page-content {}
 
-.vzs-note {
-    color: rgb(153,153,153);
-}
+.vzs-note { color: rgb(153,153,153); }
+
+.vzs-article {}
+.vzs-article-content { text-align: justify; }
+.vzs-article-comments {}
+.vzs-article-attachments {}
