--- a/app/views/articles/_show_attachments.html.erb
+++ b/app/views/articles/_show_attachments.html.erb
@@ -1,14 +1,15 @@
 
-  <div class="attachments">
-    <% unless @article.attachments.empty? %>
-      <h3>Přílohy</h3>
-      <ul>
-        <%= render @article.attachments %>
-      </ul>
-    <% end %>
-    <% if can? :create, @attachment %>
-      <div id="new-attachment">
-        <%= render 'attachments/form' %>
-      </div>
-    <% end %>
-  </div>
+<div class="row-fluid vzs-article-attachments">
+  <% unless @article.attachments.empty? %>
+    <h3>Přílohy</h3>
+    <ul>
+      <%= render @article.attachments %>
+    </ul>
+  <% end %>
+  <% if can? :create, @attachment %>
+    <div id="vzs-new-attachment">
+      <% @attachment ||= current_user.attachments.new :article_id => @article.id if current_user %>
+      <%= render 'attachments/form' %>
+    </div>
+  <% end %>
+</div>
