--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,8 @@
 <% title "Edit Article" %>
-<%= link_to articles_path, :class => ['btn', 'pull-right', 'btn-primary', 'btn-large'] do %>
-  <i class="icon-arrow-left icon-white"></i> Výpis všech článků
+<% context_menu do %>
+  <%= link_back articles_path, 'Výpis všech článků' %>
+  <%= link_show @article, 'Zobrazit' %>
+  <%= link_delete @article, 'Smazat' %>
 <% end %>
 
 <%= render 'form' %>
