--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -1,8 +1,14 @@
 <% title @gallery.name%>
+<% context_menu do %>
+  <%= link_back galleries_path, 'Seznam fotogalerií' %>
+  <% if can? :edit, @gallery%>
+    <%= link_edit edit_gallery_path(@gallery), t('btn.edit') %>
+    <%= link_delete @gallery, t('btn.delete'), 'Opravdu odstranit tuto galerii?' %>
+  <% end %>
+<% end %>
 <div class="row-fluid vzs-article">
 
   <div class="row-fluid">
-    <div class="pull-right"><%= render 'galleries/show_buttons' %></div>
     <div class="">
       <%= @gallery.description %>&nbsp;
       <% unless @gallery.article.nil? %>
