--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -9,6 +9,8 @@
     <%= render 'profiles/form', :f=>f %>
   <% end %>
 	<%= f.buttons do %>
-		<%= f.commit_button :label => @user.id.nil? ? t('btn.register') : t('btn.save')  %>
+      <%= f.action :submit, :as => :button,
+        :label => @user.id.nil? ? t('btn.register') : t('btn.save'),
+        :button_html => { :class => 'btn btn-success' }   %>
 	<% end %>
 <% end %>
