--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,7 @@
 <% title "Seznam členů" %>
-
-<% if can? :manage, User %>
-  <%= link_to new_user_path, :class => "btn btn-large btn-primary pull-right" do %>
-    <i class="icon-pencil icon-white"></i> Nový Člen
+<% context_menu do %>
+  <% if can? :manage, User %>
+    <%= link_new new_user_path, 'Nový člen' %>
   <% end %>
 <% end %>
 
