--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,4 +1,6 @@
-<% title "Edit Comment" %>
-
+<% title t('label.comment.edit') %>
+<% context_menu do %>
+  <%= link_back @comment.article, 'Zpět ke článku' %>
+<% end %>
 <%= render 'form' %>
 
