--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -1,5 +1,7 @@
 <% title t('label.page.edit') %>
-<%= link_to pages_path, :class => ['btn', 'pull-right', 'btn-primary', 'btn-large'] do %>
-  <i class="icon-arrow-left icon-white"></i> Seznam stránek
+<% context_menu do %>
+  <%= link_back pages_path, 'Seznam stránek' %>
+  <%= link_show @page, 'Zobrazit' %>
+  <%= link_delete @page, t('btn.delete'), 'Opravdu odstranit stránku ' + @page.title + '?' %>
 <% end %>
 <%= render :partial => 'form' %>
