--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,23 +1,27 @@
 <% title t('label.page.index') %>
-<%= link_to t('label.page.new'), new_page_path, :class => 'btn ' %>
+<% context_menu do %>
+  <%= link_new new_page_path, t('label.page.new') %>
+<% end %>
 <table class="table table-striped">
   <thead>
     <tr>
-      <th>ID</th>
-      <th><%= t('page.attr.title') %></th>
-      <th><%= t('page.attr.navbar_short') %>/<%= t('page.attr.menu_short') %></th>
+      <th><%= t('label.page.page') %></th>
       <th><%= t('label.actions') %></th>
     </tr>
   </thead>
   <tbody>
     <% @pages.each do |page| %>
       <tr>
-        <td><%= page.id %></td>
-        <td><%= page_link page %></td>
-        <td><%= bool_name page.navbar %> / <%= bool_name page.menu %></td>
         <td>
-          <%= link_to t('btn.edit'), edit_page_path(page), :class => 'btn btn-mini' %>
-          <%= link_to t('btn.delete'), page_path(page), :method => :delete, :confirm => 'Opravdu smazat?', :class => 'btn btn-mini btn-danger' %>
+          <%= page_link page %>
+          <%= menu_presence page %>
+        </td>
+        <td>
+          <div class="btn-group">
+            <%= link_to t('btn.show'), page, :class => 'btn btn-mini' %>
+            <%= link_to t('btn.edit'), edit_page_path(page), :class => 'btn btn-mini' %>
+            <%= link_to t('btn.delete'), page_path(page), :method => :delete, :confirm => 'Opravdu smazat stránku '+page.title+'?', :class => 'btn btn-mini btn-danger' %>
+          </div>
         </td>
       </tr>
     <% end %>
