--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -1,6 +1,6 @@
 <% title t('label.page.new') %>
-<%= link_to articles_path, :class => ['btn', 'pull-right', 'btn-primary', 'btn-large'] do %>
-  <i class="icon-arrow-left icon-white"></i> Seznam stránek
+<% context_menu do %>
+  <%= link_back pages_path, 'Seznam stránek' %>
 <% end %>
 
 <%= render :partial => 'form' %>
