--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,33 +1,16 @@
 <% title @page.title %>
+<% context_menu do %>
+  <% if can? :manage, Page %>
+    <%= link_back pages_path, 'Seznam stránek' %>
+    <%= link_edit edit_page_path(@page), t('btn.edit') %>
+    <%= link_delete @page, t('btn.delete'), 'Opravdu odstranit stránku ' + @page.title + '?' %>
+  <% end %>
+<% end %>
 
 <div class="row-fluid vzs-page">
 
-  <div class="row-fluid">
-    <div class="span8">
-      <div class="row-fluid vzs-page-content">
-        <%= simple_format @page.content %>
-      </div>
-    </div>
-
-    <div class="span4">
-      <% if can? :manage, @page %>
-        <div>
-          <%= link_to pages_path, :class => "btn btn-primary btn-large" do %>
-            <i class="icon-arrow-left icon-white"></i> Seznam stránek
-          <%end %>
-        </div>
-        <br />
-        <div class="btn-group">
-          <%= link_to edit_page_path(@page), :class => "btn" do %>
-            <i class="icon-edit"></i> <%= t('btn.edit') %>
-          <% end %>
-          <%= link_to @page, :confirm => 'Opravdu odstranit tuto stránku?', :method => :delete, :class => "btn btn-danger" do %>
-            <i class="icon-trash"></i> <%= t('btn.delete') %>
-          <% end %>
-        </div>
-      <% end %>
-      <br />
-    </div>
+  <div class="row-fluid vzs-page-content">
+    <%= simple_format @page.content %>
   </div>
 
 </div>
