--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,7 @@
 <% title t('label.user.edit') %>
-
+<% context_menu do %>
+  <%= link_back users_path, 'Seznam členů' %>
+  <%= link_show @user, 'Zobrazit' %>
+<% end %>
 <%= render 'form' %>
 
-<p>
-  <%= link_to "Show", @user %> |
-  <%= link_to "View All", users_path %>
-</p>
