--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,10 +9,8 @@
         <%= simple_format @article.content %>
       </div>
       <% unless @article.gallery.nil? %>
-        <h3>Fotky:</h3>
-        <p>Více fotek najdete ve fotogalerii <%= link_to @article.gallery.name, @article.gallery %>.</p>
         <ul class="thumbnails">
-          <%= render @article.gallery.photos[0..2] %>
+          <%= render 'galleries/gallery', :gallery => @article.gallery %>
         </ul>
       <% end %>
       <%= render 'articles/show_comments' %>
