--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -16,7 +16,7 @@
       <% end %>
     </div>
 
-    <%= render 'galleries/show_photos' %>
+    <%= render 'galleries/show_photos', :gallery => @gallery %>
 
   </div>
 
