--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,15 +9,17 @@
 
   <div class="tabbable">
     <ul class="nav nav-tabs">
-      <% @users.keys.each do |group_key| %>
-        <li><a href="#<%= group_key %>" data-toggle="tab"><%=t group_key, :scope => 'user.groups' %></a></li>
-      <% end %>
+        <li>
+          <%= link_to t(:members, :scope => 'user.groups'), "##{:members}", :data => {:toggle => "tab"} %>
+        </li>
+        <li>
+          <%= link_to t(:outsiders, :scope => 'user.groups'), "##{:outsiders}", :data => {:toggle => "tab"} %>
+        </li>
     </ul>
 
     <div class="tab-content">
-      <% @users.each do |group_key,group| %>
-        <%= render 'index_tab', :group_key => group_key, :group => group %>
-      <% end %>
+        <%= render 'index_tab', :group_key => :members, :group => @presenter.members %>
+        <%= render 'index_tab', :group_key => :outsiders, :group => @presenter.outsiders %>
     </div>
   </div>
 </div>
