--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -21,17 +21,21 @@
 <% @articles[1..-1].each do |article| %>
   <div class=span5>
     <div class="row">
-        <div class="span2 showgrid">
-        <% if article.gallery.try(:photos) %>
-          <%= image_tag article.gallery.photos.first.image.url(:small) %>
-        <% end %>
-        </div>
-        <div class="span3">
+        <div class="span5">
         <h2><%= link_to article.title, article %></h2>
-        <p><%= simple_format article.content.truncate(150) %></p>
-        <p>
-          <%= link_to 'Více »', article, :class =>  "btn" %>
-        </p>
+        <div class="row">
+          <div class="span3">
+            <p><%= simple_format article.content.truncate(150) %></p>
+            <p>
+              <%= link_to 'Více »', article, :class =>  "btn" %>
+            </p>
+          </div>
+          <div class="span2 showgrid">
+            <% if article.gallery.try(:photos) %>
+              <%= image_tag article.gallery.photos.first.image.url(:thumbnail) %>
+            <% end %>
+          </div>
+        </div>
       </div>
     </div>
   </div>
