znak vzs vede na root

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
         <div class="span3" id="vzs-left-menu">
           <div class="well sidebar-nav">
           <div class="row-fluid" id="vzs-main-logo">
-            <%= image_tag "logo_vzs.gif", :size => "150x150" %>
+            <%= link_to image_tag("logo_vzs.gif", :size => "150x150"), root_path %>
           </div>
             <%= render 'layouts/menu' %>
           </div><!--/.well -->
