pridani nove velikosti obrazku gallery. Zmena zobrazeni obrazku na hlavni strance.

--- a/app/assets/stylesheets/vzs.css.scss
+++ b/app/assets/stylesheets/vzs.css.scss
@@ -12,3 +12,8 @@
 .vzs-article-content { text-align: justify; }
 .vzs-article-comments {}
 .vzs-article-attachments {}
+
+img.float.right {
+  float:left;
+  margin-right: 10px;
+}
