pridani stinu pod hlavni obsah.

--- a/app/assets/stylesheets/vzs.css.scss
+++ b/app/assets/stylesheets/vzs.css.scss
@@ -3,7 +3,12 @@
     text-align: center;
     padding-bottom: 20px;
 }
-#vzs-main-content {}
+.vzs-main-content {
+  border-radius: 20px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  padding-left: 10px;
+  padding-top: 10px;
+}
 #vzs-page-content {}
 
 .vzs-note { color: rgb(153,153,153); }
