--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
     </div>
 
     <div class="container-fluid">
-      <div class="row-fluid">
+      <div class="row-fluid vzs-main-content">
 
         <div class="span3" id="vzs-left-menu">
           <div class="well sidebar-nav">
