--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -7,6 +7,7 @@
   <% if can? :update_extended, @user.profile %>
     <%= p.input :birthdate, :as => :date, :label => t('user.attr.birthdate'), :start_year => Time.now.year-100 %>
     <%= p.input :birthnumber, :label => t('user.attr.birthnumber') %>
+    <%= p.input :vzs_id %>
     <%= render 'addresses/form', :f => p %>
   <% end %>
 <% end %>
