povoleni vseho HTML v strankach.

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -10,7 +10,7 @@
 <div class="row-fluid vzs-page">
 
   <div class="row-fluid vzs-page-content">
-    <%= simple_format @page.content %>
+    <%= raw @page.content %>
   </div>
 
 </div>
