misto skupiny zobrazit telefon v seznamu clenu

--- a/app/views/users/_index_tab.html.erb
+++ b/app/views/users/_index_tab.html.erb
@@ -8,7 +8,7 @@
                   <th class="span2"><%=t 'user.attr.fullname' %></th>
                   <th class="span3"><%=t 'user.attr.email' %></th>
                   <th class="span1"><%=t 'user.attr.age' %></th>
-                  <th class="span2"><%=t 'user.attr.group' %></th>
+                  <th class="span2"><%=t 'user.attr.telephone' %></th>
                   <th class="span4"></th>
                 </tr>
               </thead>
