--- a/app/views/profiles/_list_person.html.erb
+++ b/app/views/profiles/_list_person.html.erb
@@ -2,7 +2,7 @@
   <td><%= profile.user.full_name %></td>
   <td><%= profile.email %></td>
   <td><%= profile.user_age%></td>
-  <td><%= group_name(profile.user.group) %></td>
+  <td><%= profile.telephone %></td>
   <td>
     <div class="btn-group">
       <%= link_to profile.user, :class => "btn" do %>
