--- a/app/views/articles/_meta_info.html.erb
+++ b/app/views/articles/_meta_info.html.erb
@@ -1,7 +1,9 @@
 
       <div class="row-fluid vzs-note">
         <small>
+          <% if article.user %>
           <span title="Autor"><i class="icon-user"></i> <%= article.user.full_name %></a>
+          <% end %>
           <span title="Vznik článku"><i class="icon-calendar"></i> <%= l article.created_at, :format => :long %></span>
           <% if current_user and current_user.group >= User::GROUP[:BOARD] %>
             <span title="Minimální požadované oprávnění"><i class="icon-eye-open"></i> <%= group_name(article.group) %></span>
