--- a/app/views/addresses/_form.html.erb
+++ b/app/views/addresses/_form.html.erb
@@ -1,6 +1,6 @@
 <%= f.semantic_fields_for :address do |a| %>
-  <%= a.input :street, :label => "Ulice" %>
-  <%= a.input :house_number, :label => "Číslo popisné" %>
-  <%= a.input :city, :label => "Město" %>
-  <%= a.input :postcode, :label => "PSČ" %>
+  <%= a.input :street %>
+  <%= a.input :house_number %>
+  <%= a.input :city %>
+  <%= a.input :postcode %>
 <% end %>
