--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -6,7 +6,7 @@
       <%= f.input :content %>
       <%= f.input :commentable %>
       <%= f.input :sticky %>
-      <%= f.input :group, :as => :select, :collection => group_names, :label => 'Skupina', :include_blank => false %>
+      <%= f.input :group, :as => :select, :collection => group_names, :include_blank => false %>
     <% end %>
     <%= f.actions do %>
       <%= f.action :submit, :as => :button, :button_html => { :class => 'btn btn-success' } %>
