--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,12 +1,12 @@
 <%= f.semantic_fields_for :profile do |p| %>
-  <%= p.input :first_name, :label => t('user.attr.first_name') %>
-  <%= p.input :second_name, :label => t('user.attr.second_name') %>
-  <%= p.input :email, :label => t('user.attr.email') %>
-  <%= p.input :telephone, :label => t('user.attr.phonenumber') %>
-  <%= p.input :im_jabber, :label => t('user.attr.im_jabber') %>
+  <%= p.input :first_name %>
+  <%= p.input :second_name %>
+  <%= p.input :email %>
+  <%= p.input :telephone %>
+  <%= p.input :im_jabber %>
   <% if can? :update_extended, @user.profile %>
-    <%= p.input :birthdate, :as => :date, :label => t('user.attr.birthdate'), :start_year => Time.now.year-100 %>
-    <%= p.input :birthnumber, :label => t('user.attr.birthnumber') %>
+    <%= p.input :birthdate, :as => :date, :start_year => Time.now.year-100 %>
+    <%= p.input :birthnumber %>
     <%= p.input :vzs_id %>
     <%= render 'addresses/form', :f => p %>
   <% end %>
