--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,10 +1,10 @@
 <%= semantic_form_for @user do |f| %>
 	<%= f.inputs do %>
-      <%= f.input :login, :label => t('user.attr.login') %>
-      <%= f.input :password, :label => t('user.attr.password'), :input_html => { :autocomplete => 'off' } %>
-      <%= f.input :password_confirmation, :label => t('user.attr.password_confirmation'), :input_html => { :autocomplete => 'off' } %>
+      <%= f.input :login %>
+      <%= f.input :password, :input_html => { :autocomplete => 'off' } %>
+      <%= f.input :password_confirmation, :input_html => { :autocomplete => 'off' } %>
         <% if can? :manage, User %>
-          <%= f.input :group, :as => :select, :collection => group_names, :label => 'Skupina' %>
+          <%= f.input :group, :as => :select, :collection => group_names %>
         <% end %>
     <%= render 'profiles/form', :f=>f %>
   <% end %>
