--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,10 +10,10 @@
   <div class="tabbable">
     <ul class="nav nav-tabs">
         <li>
-          <%= link_to t(:members, :scope => 'user.groups'), "##{:members}", :data => {:toggle => "tab"} %>
+          <%= link_to t(:members, :scope => 'groups'), "##{:members}", :data => {:toggle => "tab"} %>
         </li>
         <li>
-          <%= link_to t(:outsiders, :scope => 'user.groups'), "##{:outsiders}", :data => {:toggle => "tab"} %>
+          <%= link_to t(:outsiders, :scope => 'groups'), "##{:outsiders}", :data => {:toggle => "tab"} %>
         </li>
     </ul>
 
