--- a/app/assets/stylesheets/vzs.css.scss
+++ b/app/assets/stylesheets/vzs.css.scss
@@ -8,6 +8,8 @@
   border-radius: 20px;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
   padding-left: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 #vzs-page-content {}
 
